Initial commit of web app

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,26 @@ build/
 
 ### VS Code ###
 .vscode/
+
+
+# dependencies
+webapp/node_modules
+webapp/.pnp
+webapp/.pnp.js
+
+# testing
+webapp/coverage
+
+# production
+webapp/build
+
+# misc
+webapp/.DS_Store
+webapp/.env.local
+webapp/.env.development.local
+webapp/.env.test.local
+webapp/.env.production.local
+
+webapp/npm-debug.log*
+webapp/yarn-debug.log*
+webapp/yarn-error.log*
