--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=7000
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
@@ -6,3 +7,5 @@ spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+#Hibernate
+spring.jpa.hibernate.ddl-auto=update
